--- a/static/style.css
+++ b/static/style.css
@@ -378,6 +378,11 @@
     text-align: center;
 }
 /* set password */
+.set_pass_container {
+    margin-top: 6%;
+    display: flex;
+    justify-content: center;
+}
 .set_pass li {
     margin-left: 4%;
     color: #72a56f;
@@ -406,15 +411,29 @@
     box-shadow: 0 0 10px 0 #a98fd9;
     border: none;
 }
+/* change pass*/
+.change_pass {
+    margin-top: 12%;
+    display: flex;
+    justify-content: center;
+}
+.change_pass .login_container{
+    width: 40%;
+    padding: 2%;
+    border: none
+}
 /* log in */
+.login_wrap {
+    margin-top: 6%;
+    display: flex;
+    justify-content: center;
+}
 .login_container {
     border: 1px solid black;
     box-shadow: 0 0 100px 8px #a98fd9;
     padding: 2%;
     border: none;
-}
-.login_wrap {
-    margin-top: 6%
+    width: 40%;
 }
 .login_button {
     width: 30%;
@@ -501,7 +520,7 @@
 }
 .Edit_profile_header p {
     flex: 7;
-    margin-right: 14%;
+    margin-right: 10%;
 }
 .Edit_go_back_btn {
     display: flex;
@@ -525,6 +544,14 @@
     flex-direction: column;
     box-shadow: 0px 0px 22px 0 #a98fd9;
     margin: 6% 24% 0 24%;
+}
+.header_HisBook {
+    display: flex;
+    justify-content: space-around;
+    background-color: #a98fd9;
+    width: 100%;
+    height: 180px;
+    overflow: hidden;
 }
 .header_HisBook img {
     width: 120px;
@@ -554,6 +581,16 @@
     color: white;
     padding: 1px 6px 6px 10px;
     font-size: 36px;
+}
+.UserName {
+    font-size: 40px;
+    margin: 32px 0 0 0;
+    color: white;
+}
+.UserMail {
+    font-size: 22px;
+    font-weight: 700;
+    color: white;
 }
 .HisBook_edit_btn a:hover {
     background-color: #b7a9d0;
@@ -686,7 +723,6 @@
     /* head */
     .container_nav_bar {
         height: 5em;
-        position: relative;
     }
     .nav_bar_logo {
         width: 150px;
@@ -793,6 +829,24 @@
     .plus_button {
         position: static;
     }
+    /* set password */
+    .set_pass_container {
+        margin-top: 16%;
+    }
+    /* change pass*/
+    .change_pass {
+        margin-top: 40%;
+    }
+    .change_pass .login_container{
+        width: 88%;
+        padding: 4%;
+    }
+    .change_pass label {
+        font-size: 18px;
+    }
+    .change_pass p {
+        font-size: 14px;
+    }
     /* log in*/
     .login_wrap {
         display: flex;
@@ -806,9 +860,43 @@
     .container_profile {
         margin: 32% 0 16% 0;
     }
-    /* profile */
+    .Edit_profile_header .Edit_go_back_btn{
+        margin: 0;
+    }
+    .Edit_profile_header .Edit_go_back_btn i{
+        font-size: 26px;
+    }
+    .Edit_profile_header .login_label{
+        font-size: 20px;
+    }
+    /* His Book profile */
+    .header_HisBook {
+        padding: 6% 0;
+    }
+    .UserName {
+        font-size: 26px;
+        margin: 32px 0 0 0;
+        color: white;
+    }
+    .UserMail {
+        font-size: 18px;
+        font-weight: 700;
+        color: white;
+    }
+    .HisBook_go_back_btn i {
+        font-size: 28px;
+        padding: 0 8px;
+    }
+    .HisBook_edit_btn a {
+        font-size: 26px;
+    }
     .header_HisBook img {
         margin: 28px 10px;
+        width: 100px;
+        height: 90px;
+    }
+    .HisBook_edit_btn {
+
     }
     .HisBook_container {
         display: flex;
@@ -827,6 +915,9 @@
     }
     .HisBook_item_title{
         font-size: 20px;
+    }
+    .login_container {
+        width: 70%;
     }
     /* news detail page */
     .news_wrap {
