--- a/user/templates/user/change-pass.html
+++ b/user/templates/user/change-pass.html
@@ -4,9 +4,8 @@
 
 {% block content %}
 
-<div class="row" style="margin-top: 12%">
-    <div class="col-sm-4"></div>
-    <div class="col-sm-4 login_container" style="padding: 2%; border: none">
+<div class="change_pass">
+    <div class="login_container">
         <form method="post" id="password-form">
             {% csrf_token %}
             <label for="{{ form.password.id_for_label }}" class="label_form">{% blocktrans %}パスワード{% endblocktrans %}</label>
@@ -21,7 +20,6 @@
             </div>
         </form>
     </div>
-    <div class="col-sm-4"></div>
 </div>
     <script>
         function validateForm() {
