--- a/user/templates/user/set-password.html
+++ b/user/templates/user/set-password.html
@@ -7,45 +7,42 @@
     <meta charset="UTF-8">
     <title>set password</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="{% static 'login.css' %}">
     <link rel="stylesheet" href="{% static '/style.css' %}">
 </head>
 <body>
-<div class="row" style="margin-top: 6%">
-    <div class="col-sm-4"></div>
-    <div class="col-sm-4 login_container" style="padding: 2%; border: none">
-        <form method="post" id="password-form">
-            {% csrf_token %}
-            <label for="{{ form.password.id_for_label }}" class="label_form">{% blocktrans %}パスワード{% endblocktrans %}</label>
-            <br>
-            <input type="password" name="{{ form.password.name }}" id="{{ form.password.id_for_label }}" class="input_form"/>
-            <div id="error-password" class="alert alert-danger" style="display: none; padding: 6px 10px; font-size: 12px;" role="alert">
-                {% blocktrans %}パスワードを入力してください{% endblocktrans %}
-            </div>
-            <br>
-            <label for="{{ form.password_confirm.id_for_label }}" class="label_form">{% blocktrans %}もう一度パスワードを入力してください{% endblocktrans %}</label>
-            <br>
-            <input type="password" name="{{ form.password_confirm.name }}" id="{{ form.password_confirm.id_for_label }}" class="input_form"/>
-            <div id="error-password-confirm" class="alert alert-danger" style="display: none; padding: 6px 10px; font-size: 12px;" role="alert">
-                {% blocktrans %}パスワードを再入力してください{% endblocktrans %}
-            </div>
-            <div class="set_pass">
-                <p style="margin-bottom: 4px 0">パスワードのルール</p>
-                <ul>
-                    <li>8文字以上</li>
-                    <li>1つ以上の文字(a, b, c...)</li>
-                    <li>1つ以上の数字(1, 2, 3...)</li>
-                    <li>大文字と小文字の両方を含めてください</li>
-                    <li>パスワードには簡単に推測できる単語、 語句、パターンは使えません</li>
-                    <li>3つ以上の連続文字("111", 123", "abc", "qwert"など) は使えません</li>
-                </ul>
-            </div>
-            <div style="display: flex; justify-content: center; margin-top: 4%;">
-                <button class="category_button hover_color_button" type="button" onclick="validateForm()" style="width: 30%">{% blocktrans %}次へ{% endblocktrans %}</button>
-            </div>
-        </form>
-    </div>
-    <div class="col-sm-4"></div>
+<div class="set_pass_container">
+    <form class="login_container" method="post" id="password-form">
+        {% csrf_token %}
+        <label for="{{ form.password.id_for_label }}" class="label_form">{% blocktrans %}パスワード{% endblocktrans %}</label>
+        <br>
+        <input type="password" name="{{ form.password.name }}" id="{{ form.password.id_for_label }}" class="input_form"/>
+        <div id="error-password" class="alert alert-danger" style="display: none; padding: 6px 10px; font-size: 12px;" role="alert">
+            {% blocktrans %}パスワードを入力してください{% endblocktrans %}
+        </div>
+        <br>
+        <label for="{{ form.password_confirm.id_for_label }}" class="label_form">{% blocktrans %}もう一度パスワードを入力してください{% endblocktrans %}</label>
+        <br>
+        <input type="password" name="{{ form.password_confirm.name }}" id="{{ form.password_confirm.id_for_label }}" class="input_form"/>
+        <div id="error-password-confirm" class="alert alert-danger" style="display: none; padding: 6px 10px; font-size: 12px;" role="alert">
+            {% blocktrans %}パスワードを再入力してください{% endblocktrans %}
+        </div>
+        <div class="set_pass">
+            <p style="margin-bottom: 4px;">パスワードのルール</p>
+            <ul>
+                <li>8文字以上</li>
+                <li>1つ以上の文字(a, b, c...)</li>
+                <li>1つ以上の数字(1, 2, 3...)</li>
+                <li>大文字と小文字の両方を含めてください</li>
+                <li>パスワードには簡単に推測できる単語、 語句、パターンは使えません</li>
+                <li>3つ以上の連続文字("111", 123", "abc", "qwert"など) は使えません</li>
+            </ul>
+        </div>
+        <div style="display: flex; justify-content: center; margin-top: 4%;">
+            <button class="category_button hover_color_button" type="button" onclick="validateForm()" style="width: 30%">{% blocktrans %}次へ{% endblocktrans %}</button>
+        </div>
+    </form>
 </div>
     <script>
         function validateForm() {
