--- a/user/templates/user/code-verify.html
+++ b/user/templates/user/code-verify.html
@@ -6,14 +6,13 @@
     <meta charset="UTF-8">
     <title>Code verify</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="{% static 'login.css' %}">
     <link rel="stylesheet" href="{% static 'style.css' %}">
 </head>
 <body>
-<div class="row" style="margin-top: 6%">
-    <div class="col-sm-4">
-    </div>
-    <div class="col-sm-4 login_container" style="padding: 2%; border: none">
+<div class="code_verify">
+    <div class="login_container">
         <form method="post" id="code-verify">
             {% csrf_token %}
             <label for="{{ form.code.id_for_label }}" class="label_form">{% blocktrans %}コード{% endblocktrans %}</label>
@@ -27,9 +26,6 @@
                 <button class="category_button hover_color_button"  type="submit" style="width: 30%">{% blocktrans %}次へ{% endblocktrans %}</button>
             </div>
         </form>
-    </div>
-    <div class="col-sm-4">
-
     </div>
 </div>
 
