--- a/staticfiles/style.css
+++ b/staticfiles/style.css
@@ -96,7 +96,7 @@
 }
 .wiki_button {
     font-size: 34px;
-    background-color: red;
+    background-color: #a98fd9;
     padding: 0 10px;
     z-index: 9;
     border-top-right-radius: 16px;
@@ -221,7 +221,7 @@
 }
 .home_body_container {
     margin-top: 4%;
-    position: relation;
+    position: relative;
     z-index: 0
 }
 .category_followed {
@@ -378,6 +378,11 @@
     text-align: center;
 }
 /* set password */
+.set_pass_container {
+    margin-top: 6%;
+    display: flex;
+    justify-content: center;
+}
 .set_pass li {
     margin-left: 4%;
     color: #72a56f;
@@ -387,11 +392,11 @@
 }
 /* Comment */
 .comment_body .category_button {
-    margin: 1% 3% 1% 0;
+    margin: 3% 3% 1% 0;
     position: relative;
-    font-size: 24px;
+    font-size: 20px;
     color: #e2d9f3;
-    width: 14%;
+    width: 18%;
 }
 .comment_input {
     width: 100%;
@@ -406,15 +411,29 @@
     box-shadow: 0 0 10px 0 #a98fd9;
     border: none;
 }
+/* change pass*/
+.change_pass {
+    margin-top: 12%;
+    display: flex;
+    justify-content: center;
+}
+.change_pass .login_container{
+    width: 40%;
+    padding: 2%;
+    border: none
+}
 /* log in */
+.login_wrap {
+    margin-top: 6%;
+    display: flex;
+    justify-content: center;
+}
 .login_container {
     border: 1px solid black;
     box-shadow: 0 0 100px 8px #a98fd9;
     padding: 2%;
     border: none;
-}
-.login_wrap {
-    margin-top: 6%
+    width: 40%;
 }
 .login_button {
     width: 30%;
@@ -434,15 +453,26 @@
     padding: 1% 2%;
     margin: 2% 0 4% 0;
 }
+/* code verify*/
+.code_verify {
+    margin-top: 6%;
+    display: flex;
+    justify-content: center;
+}
+.code_verify .login_container{
+    padding: 2%;
+    border: none;
+    width: 40%;
+}
 /* category page */
 .category_page_name {
     font-size: 50px;
-    center; margin: 40px 0;
+    text-align: center;
+    margin: 40px 0;
     color: #545454;
 }
 /* news page */
 .category_wrap {
-     border-right: solid 1px #545454;
      width: 17%;
      display: flex;
      flex-direction: column;
@@ -462,6 +492,11 @@
     color: #545454;
 }
 /* news_detail */
+.go_back {
+    margin-bottom: 32px;
+    max-width: 140px;
+    margin-left: 40px;
+}
 .news_detail_page {
     display: flex;
     justify-content: center;
@@ -469,18 +504,55 @@
 .news_wrap {
     width: 70%;
 }
+.news_wrap .category_wrap {
+    border-right: solid 1px #545454;
+    overflow: hidden;
+}
 .save ,
 .not_save {
     display: block;
 }
 .more_read_button {
-    width: 20%;
+    width: 24%;
     margin: 0 4%;
+    font-size: 20px;
+}
+.more_read_button a {
+    text-decoration: none;
+    color: #e2d9f3;
 }
 /* Edit profile*/
 .container_profile {
     margin-top: 6%;
+    display: flex;
     justify-content: center;
+}
+.container_profile img {
+    width: 200px;
+    height: 200px;
+    border-radius: 50%;
+}
+.Edit_profile_header {
+    display: flex;
+}
+.Edit_profile_header p {
+    flex: 7;
+    margin-right: 10%;
+}
+.Edit_go_back_btn {
+    display: flex;
+    flex: 1;
+    background-color: white;
+    color: #a98fd9;
+    border: none;
+    margin: -22px 0 28px 0;
+}
+.Edit_go_back_btn i{
+    font-size: 34px;
+    padding: 9px 14px;
+}
+.Edit_go_back_btn i:hover{
+    background-color: #e2d9f3;
 }
 /* History and Bookmark */
 .HisBook_container {
@@ -490,18 +562,52 @@
     box-shadow: 0px 0px 22px 0 #a98fd9;
     margin: 6% 24% 0 24%;
 }
+.header_HisBook {
+    display: flex;
+    justify-content: space-around;
+    background-color: #a98fd9;
+    width: 100%;
+    height: 180px;
+    overflow: hidden;
+}
 .header_HisBook img {
     width: 120px;
     height: 120px;
     border-radius: 50%;
-    margin: 28px;
+    margin:  28px 28px 28px -8px;
+}
+.HisBook_go_back_btn {
+    display: flex;
+    background-color: #a98fd9;
+    color: #e2d9f3;
+    border: none;
+}
+.HisBook_go_back_btn i{
+    font-size: 34px;
+    padding: 8px 14px;
+    background-color: #a98fd9;
+    color: white;
+}
+.HisBook_go_back_btn i:hover{
+    color: #e2d9f3;
 }
 .HisBook_edit_btn {
-    margin: 1% 2% 0 0;
+    margin: 4% 2% 0 0;
 }
 .HisBook_edit_btn a {
     color: white;
     padding: 1px 6px 6px 10px;
+    font-size: 36px;
+}
+.UserName {
+    font-size: 40px;
+    margin: 32px 0 0 0;
+    color: white;
+}
+.UserMail {
+    font-size: 22px;
+    font-weight: 700;
+    color: white;
 }
 .HisBook_edit_btn a:hover {
     background-color: #b7a9d0;
@@ -634,7 +740,6 @@
     /* head */
     .container_nav_bar {
         height: 5em;
-        position: relation;
     }
     .nav_bar_logo {
         width: 150px;
@@ -741,6 +846,24 @@
     .plus_button {
         position: static;
     }
+    /* set password */
+    .set_pass_container {
+        margin-top: 16%;
+    }
+    /* change pass*/
+    .change_pass {
+        margin-top: 40%;
+    }
+    .change_pass .login_container{
+        width: 88%;
+        padding: 4%;
+    }
+    .change_pass label {
+        font-size: 18px;
+    }
+    .change_pass p {
+        font-size: 14px;
+    }
     /* log in*/
     .login_wrap {
         display: flex;
@@ -754,9 +877,47 @@
     .container_profile {
         margin: 32% 0 16% 0;
     }
-    /* profile */
+    .container_profile img {
+        width: 170px;
+        height: 170px;
+    }
+    .Edit_profile_header .Edit_go_back_btn{
+        margin: 0;
+    }
+    .Edit_profile_header .Edit_go_back_btn i{
+        font-size: 26px;
+    }
+    .Edit_profile_header .login_label{
+        font-size: 20px;
+    }
+    /* His Book profile */
+    .header_HisBook {
+        padding: 6% 0;
+    }
+    .UserName {
+        font-size: 26px;
+        margin: 32px 0 0 0;
+        color: white;
+    }
+    .UserMail {
+        font-size: 18px;
+        font-weight: 700;
+        color: white;
+    }
+    .HisBook_go_back_btn i {
+        font-size: 28px;
+        padding: 0 8px;
+    }
+    .HisBook_edit_btn a {
+        font-size: 26px;
+    }
     .header_HisBook img {
         margin: 28px 10px;
+        width: 100px;
+        height: 90px;
+    }
+    .HisBook_edit_btn {
+
     }
     .HisBook_container {
         display: flex;
@@ -776,6 +937,9 @@
     .HisBook_item_title{
         font-size: 20px;
     }
+    .login_container {
+        width: 70%;
+    }
     /* news detail page */
     .news_wrap {
         width: 86%;
@@ -790,7 +954,8 @@
         margin: 70px 0 20px 0;
     }
     .more_read_button {
-        width: 32%;
+        width: 40%;
+        margin-left: 16%;
     }
     more_read_button a {
         font-size: 20px;
@@ -798,7 +963,7 @@
     }
     /* comment */
     .comment_body .category_button {
-        width: 26%;
+        width: 40%;
         font-size: 20px;
         margin: 6% 3% 1% 0;
     }
@@ -880,6 +1045,7 @@
         font-size: 28px;
         margin-bottom: 26px;
         color: #e2d9f3;
+        padding: 6px 12px;
     }
     .chatbox{
         height: 84%;
@@ -892,12 +1058,282 @@
     .chat_box_input {
         height: 40px;
     }
+    /* code verify*/
+    .code_verify {
+        margin-top: 36%;
+    }
+    .code_verify .login_container{
+        width: 90%;
+    }
 }
 /* Ipad */
 @media only screen and (min-width: 46.1875em) and (max-width: 63.9375em) {
-
-}
-/* Pc */
-@media only screen and (min-width: 64em) {
-
+    /* loading */
+    .loading {
+        margin: 80% auto;
+    }
+    /* head */
+    .container_nav_bar {
+        height: 5em;
+    }
+    .nav_bar_logo {
+        width: 150px;
+        height: 42px;
+        margin: 16px 0px;
+    }
+    .option_menu_wrap {
+        position: absolute;
+        top: 12%;
+        left: 89%;
+    }
+    .options_account_list {
+        width: 170px;
+        right: -28%;
+        top: 125%;
+        animation: modalShowOut ease 0.6s;
+    }
+    @keyframes modalShowOut {
+        from {
+            opacity: 0;
+            right: -170px;
+        }
+        to {
+            opacity: 1;
+            right: -19px;
+        }
+    }
+    .options_account_list::after {
+        display: none;
+    }
+    .options_account_list p {
+        padding: 10px 14px;
+    }
+    .language_out_option {
+        display: none;
+    }
+    .language_in_option {
+        display: block;
+        background-color: #e2d9f3;
+        padding-left: 6px;
+    }
+    /* news page */
+    .category_wrap {
+        display: none;
+    }
+    .category_wrap_mobile {
+        display: flex;
+        background-color: #e2d9f3;
+        box-shadow: 0 0 16px 2px #a98fd9;
+        overflow-x: auto;
+        white-space: nowrap;
+        margin: 16% 4% 6% 4%;
+    }
+    .category_wrap_mobile .category_button {
+        margin: 3% 3% 3% 3%;
+        padding: 0 2%;
+    }
+    .news_item_wrap {
+        margin: 0;
+    }
+    .news_item_wrap .news-container img{
+        margin: 6%;
+    }
+    .news_item_wrap .category_title {
+        font-size: 28px;
+    }
+    .category_wrap_mobile .category_button.active {
+        border: 1px solid #a98fd9;
+        box-shadow: 0 0 20px 0px #a98fd9;
+    }
+    /* news detail page */
+    .news_wrap {
+        width: 86%;
+        margin: -30px;
+    }
+    .news_wrap img {
+        width: 100%;
+    }
+    .news_wrap .col-sm-2{
+        display: none;
+    }
+    .news_wrap .col-sm-8 {
+        width: 100%;
+    }
+    .news_wrap .row{
+        justify-content: center;
+    }
+    .news_detail_page_img_wrap {
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        margin: 70px 0 20px 0;
+    }
+    .more_read_button {
+        width: 40%;
+        margin-left: 16%;
+    }
+    more_read_button a {
+        font-size: 20px;
+        padding: 0 2px;
+    }
+    /* comment */
+    .comment_body .category_button {
+        width: 40%;
+        font-size: 20px;
+        margin: 6% 3% 1% 0;
+    }
+    /* His Book profile */
+    .header_HisBook {
+        padding: 2% 0;
+    }
+    .UserName {
+        font-size: 32px;
+        margin: 32px 0 0 0;
+        color: white;
+    }
+    .UserMail {
+        font-size: 24px;
+        font-weight: 700;
+        color: white;
+    }
+    .HisBook_go_back_btn i {
+        font-size: 32px;
+        padding: 0 8px;
+    }
+    .HisBook_edit_btn a {
+        font-size: 34px;
+    }
+    .header_HisBook img {
+        margin: 28px 22px;
+        width: 100px;
+        height: 100px;
+    }
+    .HisBook_container {
+        display: flex;
+        justify-content: center;
+        margin: 12% 2% 0 2%;
+    }.js-logout-container
+    .HisBook_container .col-sm-6 {
+        width: 90%;
+    }
+    .HisBook_item_pic {
+        margin-bottom: 20px;
+    }
+    .HisBook_item_pic img {
+        width: 100%;
+        height: 100%;
+    }
+    .HisBook_item_title{
+        font-size: 20px;
+    }
+    .login_container {
+        width: 70%;
+    }
+    .js-logout-container {
+        margin-top: 40%;
+    }
+    .login_wrap {
+        margin-top: 22%;
+    }
+    /* Edit profile */
+    .container_profile {
+        margin: 26% 0 0 0;
+    }
+    .Edit_profile_header .Edit_go_back_btn{
+        margin: 0;
+    }
+    .Edit_profile_header .Edit_go_back_btn i{
+        font-size: 32px;
+    }
+    /* change pass*/
+    .change_pass {
+        margin-top: 30%;
+    }
+    .change_pass .login_container{
+        width: 70%;
+        padding: 4%;
+    }
+    .change_pass label {
+        font-size: 18px;
+    }
+    .change_pass p {
+        font-size: 14px;
+    }
+    /* set password */
+    .set_pass_container {
+        margin-top: 16%;
+    }
+    /* wiki */
+    .wiki_button {
+        border: 2px solid #e2d9f3;
+        font-size: 38px;
+        padding: 0 12px;
+    }
+    .chat_box_container {
+        right: 0;
+        bottom: 0;
+        width: 100%;
+        height: 100%;
+        display: none;
+        border-radius: 0;
+    }
+    .chat_box_container.open{
+        display: block;
+    }
+    .chat_box_header {
+        display: block;
+        background-color: #a98fd9;
+        height: 8%;
+        color: white;
+        display: flex;
+    }
+    .chat_box_header p {
+        font-size: 26px;
+        font-weight: 600;
+        text-align: center;
+        flex: 16;
+        padding-top: 2%;
+        margin-left: 8%;
+    }
+    .out_button {
+        padding: 6px 10px;
+        flex: 1;
+        margin-bottom: 26px;
+        background-color: #a98fd9;
+        border: none;
+    }
+    .out_button i {
+        font-size: 34px;
+        margin-bottom: 26px;
+        color: #e2d9f3;
+        padding: 6px 12px;
+    }
+    .chatbox{
+        height: 84%;
+        border-radius: 0;
+        margin-bottom: 10px;
+    }
+    .chatbox p {
+        margin-top: 6%;
+    }
+    .incoming {
+        font-size: 28px;
+    }
+    .outgoing {
+        font-size: 28px;
+    }
+    .incoming i{
+        font-size: 30px;
+        margin: 50% 20px 0 14px;
+    }
+    .chat_box_input {
+        height: 40px;
+    }
+    /* code verify*/
+    .code_verify {
+        margin-top: 20%;
+    }
+    .code_verify .login_container{
+        width: 60%;
+    }
 }
