--- a/user/templates/user/edit-profile.html
+++ b/user/templates/user/edit-profile.html
@@ -3,8 +3,7 @@
 {% load i18n %}
 
 {% block content %}
-<div class="row container_profile">
-    <div class="col-sm-4"></div>
+<div class="container_profile">
     <div class="col-sm-4 login_container" style="padding: 2% 6px; border: none">
         <div class="Edit_profile_header">
             <button class="Edit_go_back_btn" >
@@ -18,7 +17,7 @@
 
             <input type="file" name="profile_pic" accept="image/*" id="id_profile_pic" style="display: none;">
             <div style="display: flex; justify-content: center; position: relative">
-                <img id="profilePicPreview" src="{% if request.user.profile_pic %}{{ request.user.profile_pic.url }}{% else %}{% static 'path/to/default/image.jpg' %}{% endif %}" alt="Profile Preview" style="width: 200px; height: 200px; border-radius: 50%;">
+                <img id="profilePicPreview" src="{% if request.user.profile_pic %}{{ request.user.profile_pic.url }}{% else %}{% static 'path/to/default/image.jpg' %}{% endif %}" alt="Profile Preview">
                 <button type="button" id="changeProfilePicBtn" style="width: 24px; height: 24px; border: none; border-radius: 50%; position: absolute; top: 78%; right: 32%; box-shadow: 0px 0px 12px 6px #a98fd9;">
                 <i class="fa-regular fa-pen-to-square"></i>
             </button>
@@ -37,7 +36,6 @@
             </div>
         </form>
     </div>
-    <div class="col-sm-4"></div>
 </div>
 
 <script>
