--- a/news_app/templates/news_app/news-detail.html
+++ b/news_app/templates/news_app/news-detail.html
@@ -66,25 +66,24 @@
                         </div>
                     </div>
                 </div>
-                <ul style=" margin: 4% 0 30% 0;">
+                <ul>
                     {% for comment in comments %}
                         <li style="list-style: none;">
-                            <div class="comments">
-                                <div class="row">
-                                    <div class="col-sm-1">
-                                        <img src="{{ comment.user.profile_pic.url }}" alt="Profile pic" style="width: 46px; height: 46px; border-radius: 50%; object-fit: cover;">
-                                    </div>
-                                    <div class="col-sm-11">
-                                        <span style="font-size: 16px; background-color: #a98fd9; border-top-left-radius: 10px; border-bottom-right-radius: 10px; padding: 1px 8px;">{{ comment.user.username }}</span>
-                                        <span style="font-size: 12px; margin-left: 6px;">{{ comment.created_at }}</span>
-                                        <p id="comment-{{ comment.id }}" style="font-size: 20px; word-wrap: break-word; margin: 12px 0 0 0;"> {{ comment.comment }}</p>
-                                        <button type="button" class="btn btn-link translator-btn" comment-id="{{ comment.id }}">
-                                            <i class="fa-solid fa-language" style="color: #a98fd9;"></i>
-                                        </button>
-                                        {% if comment.user.id == request.user.id %}
-                                            <a href="{% url 'news_app:delete_comment' comment_id=comment.id %}"><i class="fa-solid fa-trash" style="color: #a98fd9;"></i></a>
-                                        {% endif %}
-                                    </div>
+                            <div class="list_comments">
+                                <div class="list_comments_img">
+                                    <img src="{{ comment.user.profile_pic.url }}" alt="Profile pic" style="width: 46px; height: 46px; border-radius: 50%; object-fit: cover;">
+                                </div>
+                                <div class="list_comments_body">
+                                    <span style="font-size: 16px; background-color: #a98fd9; border-top-left-radius: 10px; border-bottom-right-radius: 10px; padding: 1px 8px;">{{ comment.user.username }}</span>
+                                    <br>
+                                    <span style="font-size: 12px; margin-left: 6px;">{{ comment.created_at }}</span>
+                                    <p id="comment-{{ comment.id }}" style="font-size: 20px; word-wrap: break-word; margin: 12px 0 0 0;"> {{ comment.comment }}</p>
+                                    <button type="button" class="btn btn-link translator-btn" comment-id="{{ comment.id }}">
+                                        <i class="fa-solid fa-language" style="color: #a98fd9;"></i>
+                                    </button>
+                                    {% if comment.user.id == request.user.id %}
+                                        <a href="{% url 'news_app:delete_comment' comment_id=comment.id %}"><i class="fa-solid fa-trash" style="color: #a98fd9;"></i></a>
+                                    {% endif %}
                                 </div>
                             </div>
                         </li>
