--- a/user/templates/user/set-password.html
+++ b/user/templates/user/set-password.html
@@ -29,6 +29,7 @@
             {% blocktrans %}パスワードを再入力してください{% endblocktrans %}
         </div>
         <div class="set_pass">
+            {% blocktrans %}
             <p style="margin-bottom: 4px;">パスワードのルール</p>
             <ul>
                 <li>8文字以上</li>
@@ -38,6 +39,7 @@
                 <li>パスワードには簡単に推測できる単語、 語句、パターンは使えません</li>
                 <li>3つ以上の連続文字("111", 123", "abc", "qwert"など) は使えません</li>
             </ul>
+            {% endblocktrans %}
         </div>
         <div style="display: flex; justify-content: center; margin-top: 4%;">
             <button class="category_button hover_color_button" type="button" onclick="validateForm()" style="width: 30%">{% blocktrans %}次へ{% endblocktrans %}</button>
