--- a/news_app/templates/news_app/home.html
+++ b/news_app/templates/news_app/home.html
@@ -8,7 +8,12 @@
 
         </div>
         <div class="col-sm-6">
-            <p class="category_followed">{% blocktrans %}フォローしているカテゴリー{% endblocktrans %}</p>
+            {% if user.username %}
+                <p class="category_followed">{% blocktrans %}フォローしているカテゴリー{% endblocktrans %}</p>
+            {% else %}
+                <p class="category_followed">{% blocktrans %}すべてのカテゴリー{% endblocktrans %}</p>
+            {% endif %}
+
             {% for c in categories %}
                 <a href="{% url 'news_app:news' %}?category={{ c.category_en }}" style="text-decoration: none">
                     <button class="border_radius_button hover_color_button category_item">
