--- a/news_app/templates/news_app/news_page.html
+++ b/news_app/templates/news_app/news_page.html
@@ -15,7 +15,7 @@
 
     <div class="news_item_wrap">
         {% for c in categories %}
-            <p class="category_title">{{ c.category }}</p>
+            <p id="{{ c.category_en }}_category_title" class="category_title" style="{% if c.category_en == selected_category %}display: block;{% else %}display: none;{% endif %} padding-top: 20px;">{{ c.category }}</p>
         {% endfor %}
         <ul class="" id="news-container" style="list-style: none;">
             {% for n in news %}
@@ -45,59 +45,59 @@ document.addEventListener("DOMContentLoaded", function () {
     categories.forEach((category) => {
         category.addEventListener("click", (e) => {
             e.preventDefault();
-
             const urlId = category.getAttribute("url-id");
 
+            // Remove 'active' class from all category buttons
+            categories.forEach((c) => {
+                c.classList.remove('active');
+            });
+
+            // Add 'active' class to the clicked category button
+            category.classList.add('active');
+
             fetch(`/news/news/${urlId}/`)
-    .then((response) => response.json())
-    .then((data) => {
-        const newsContainer = document.getElementById("news-container");
-        newsContainer.innerHTML = "";
+                .then((response) => response.json())
+                .then((data) => {
+                    const newsContainer = document.getElementById("news-container");
+                    newsContainer.innerHTML = "";
 
-        data.news.forEach((newsObj) => {
-            const content = document.createElement("li");
-            content.classList.add("news-item");
-            const publishedAt = new Date(newsObj.published_at);
-            const formattedPublishedAt = publishedAt.toLocaleString();
+                    data.news.forEach((newsObj) => {
+                        const content = document.createElement("li");
+                        content.classList.add("news-item");
+                        const publishedAt = new Date(newsObj.published_at);
+                        const formattedPublishedAt = publishedAt.toLocaleString();
 
-
-            const img = new Image();
-            img.src = newsObj.photo;
-            img.onload = function() {
-                content.innerHTML = `
-                    <div class="row border_radius_news_item" style='margin-bottom: 30px;'>
-                        <div class="col-sm-3">
-                            <img src="${newsObj.photo}" alt="No photo" style="width: 90%; height: 60%; margin: 16% 0px 0 8%; object-fit: cover;">
-                        </div>
-                        <div class="col-sm-9">
-                            <h4><a href="${newsObj.url}"><b>${newsObj.title}</b></a></h4>
-                            <p>${newsObj.source}</p>
-                            <span style="font-size: 12px; margin-left: 6px;">${formattedPublishedAt}</span>
-                        </div>
-                    </div>
-                `;
-                newsContainer.appendChild(content);
-            };
+                        const img = new Image();
+                        img.src = newsObj.photo;
+                        img.onload = function () {
+                            content.innerHTML = `
+                                <div class="row border_radius_news_item" style='margin-bottom: 30px;'>
+                                    <div class="col-sm-3">
+                                        <img src="${newsObj.photo}" alt="No photo" style="width: 90%; height: 60%; margin: 16% 0px 0 8%; object-fit: cover;">
+                                    </div>
+                                    <div class="col-sm-9">
+                                        <h4><a href="${newsObj.url}"><b>${newsObj.title}</b></a></h4>
+                                        <p>${newsObj.source}</p>
+                                        <span style="font-size: 12px; margin-left: 6px;">${formattedPublishedAt}</span>
+                                    </div>
+                                </div>
+                            `;
+                            newsContainer.appendChild(content);
+                        };
+                    });
+                    // Update category titles
+                    const categoryTitles = document.querySelectorAll('.category_title');
+                    categoryTitles.forEach((title) => {
+                        title.style.display = 'none'; // Hide all titles
+                    });
+                    const selectedCategoryTitle = document.getElementById(`${urlId}_category_title`);
+                    selectedCategoryTitle.style.display = 'block'; // Show title of selected category
+                })
+                .catch((error) => {
+                    console.error('Error fetching news data:', error);
+                });
         });
-    })
-    .catch((error) => {
-        console.error('Error fetching news data:', error);
-    });
-        });
-    });
-});
-
-
-const tabs = document.querySelectorAll('.category_button');
-
-tabs.forEach((tab) => {
-    tab.addEventListener('click', function() {
-        tabs.forEach((tab) => {
-            tab.classList.remove('active');
-        });
-        this.classList.add('active');
     });
 });
-
 </script>
 {% endblock %}
